--- a/contrastive_learning.ipynb
+++ b/contrastive_learning.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib\n",
     "import torch\n",
     "import torch_geometric\n",
     "from utils import vis_grid, vis_from_pyg\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +487,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "intro_pyg",
+   "display_name": "pyg_intro",
    "language": "python",
    "name": "python3"
   },
@@ -500,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
